krita/plugins/tools/defaulttools/kis_tool_brush.h
@@ -41,6 +41,7 @@ class KisToolBrush : public KisToolFreehand
     Q_PROPERTY(qreal smoothnessFactor READ smoothnessFactor WRITE slotSetTailAgressiveness NOTIFY smoothnessFactorChanged)
     Q_PROPERTY(bool smoothPressure READ smoothPressure WRITE setSmoothPressure NOTIFY smoothPressureChanged)
     Q_PROPERTY(int smoothingType READ smoothingType WRITE slotSetSmoothingType NOTIFY smoothingTypeChanged)
+    Q_PROPERTY(bool useScalableDistance READ useScalableDistance WRITE setUseScalableDistance NOTIFY useScalableDistanceChanged)
 
 public:
     KisToolBrush(KoCanvasBase * canvas);
@@ -52,6 +53,7 @@ public:
     qreal smoothnessFactor() const;
     bool smoothPressure() const;
     int smoothingType() const;
+    bool useScalableDistance() const;
 
 public slots:
     void slotSetSmoothnessDistance(qreal distance);
@@ -59,12 +61,14 @@ public slots:
     void slotSetSmoothingType(int index);
     void slotSetTailAgressiveness(qreal argh_rhhrr);
     void setSmoothPressure(bool value);
+    void setUseScalableDistance(bool value);
 
 Q_SIGNALS:
     void smoothnessQualityChanged();
     void smoothnessFactorChanged();
     void smoothPressureChanged();
     void smoothingTypeChanged();
+    void useScalableDistanceChanged();
 
 private:
     QGridLayout *m_optionLayout;
@@ -74,6 +78,7 @@ private:
     KisDoubleSliderSpinBox *m_sliderSmoothnessDistance;
     KisDoubleSliderSpinBox *m_sliderTailAggressiveness;
     QCheckBox *m_chkSmoothPressure;
+    QCheckBox *m_chkUseScalableDistance;
     QButtonGroup * m_buttonGroup;
 };
 
