krita/ui/kis_canvas_resource_provider.cpp
@@ -79,6 +79,7 @@ void KisCanvasResourceProvider::setResourceManager(KoCanvasResourceManager *reso
 
     m_resourceManager->setResource(HdrExposure, 0.0);
     m_resourceManager->setResource(HdrGamma, 1.0);
+    m_resourceManager->setResource(EffectiveZoom, 1.0);
 
     connect(m_resourceManager, SIGNAL(canvasResourceChanged(int,QVariant)),
             this, SLOT(slotCanvasResourceChanged(int,QVariant)));
